--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express-session": "^1.15.6",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.15",
+    "nodemailer": "^4.7.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^2.0.3"
   }
 }
