--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "set NODE_ENV=production&& set MONGO_USER=igil&& set MONGO_PASSWORD=8mktvyjzS7SKf7PD&& set MONGO_DEFAULT_DATABASE=shop&& node app.js",
+    "start-server": "node app.js",
+    "start:dev": "nodemon app.js"
   },
   "author": "Ivan Gil",
   "license": "ISC",
@@ -23,6 +25,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
+    "helmet": "^3.15.1",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.15",
     "multer": "^1.4.1",
